--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.1",
@@ -30,6 +32,7 @@
     "mini-css-extract-plugin": "^1.3.8",
     "node-sass": "^5.0.0",
     "sass-loader": "^11.0.1",
+    "file-loader": "^6.2.0",
     "webpack": "^5.24.1",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
